Fix add language button alignment

--- a/src/styles/views/managers/language.scss
+++ b/src/styles/views/managers/language.scss
@@ -29,6 +29,7 @@
       flex-direction: column;
       justify-content: flex-end;
       border-radius: 23px;
+      align-items: center;
       .languages--name {
         pointer-events: none;
       }
